bug-hunter/resources/css/app.css
body {
    background-color: white;
    color: #333333;
    padding: 0;
    margin: 0;
    font-family:'Courier New', Courier, monospace;
    font-size: 20px;
}

html, body {
    overflow-y: scroll;
    width: 100%;
    /* padding: 0; */
}

.buttons {
    background-color: #28a745;
    color: #fff;
    border: none;
    border-radius: 8px;
    padding: 10px 20px;
    font-size: 16px;
    font-weight: bold;
    cursor: pointer;
    transition: all 0.3s ease;
    width: 150px;
    text-align: center;
    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
}

.buttons:hover {
    background-color: darkgreen;
}

.center-component {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 80vh;
}

.footer {
    background-color: black;
    color: white;
    text-align: center;
    padding: 10px 0;
    position: fixed;
    bottom: 0;
    width: 100%;
    left: 0;
    box-sizing: border-box;
}

.headings {
    font-weight: bold;
    color: green;
    text-align: center;
    font-size: 1.2rem;
    margin-bottom: 20px;
    margin: 30px auto;
}

/* form styles */
form {
    margin: 20px auto;
    padding: 20px;
    background-color: #f9f9f9;
    border: 1px solid #ccc;
    border-radius: 8px;
    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
    width: 50%;
    max-width: 900px;
}

form div {
    margin-bottom: 15px;
}

form label {
    display: block;
    margin-bottom: 5px;
    font-weight: bold;
    color: #333;
}

form button:hover {
    background-color: darkgreen;
}

form input,
form textarea,
form select {
    width: 100%;
    padding: 10px;
    font-size: 16px;
    border: 1px solid #ccc;
    border-radius: 5px;
    background-color: #f3f3f3;
    outline: none;
    transition: border-color 0.3s, box-shadow 0.3s;
}

form button {
    background-color: green;
    color: #fff;
    padding: 10px 15px;
    font-size: 16px;
    border: none;
    border-radius: 5px;
    cursor: pointer;
    transition: background-color 0.3s;
}

form input:focus,
form textarea:focus,
form select:focus {
    border-color: gainsboro;
    box-shadow: 0 0 5px rgba(102, 175, 233, 0.5);
}

.sidebar {
    width: 200px;
    background-color: black;
    color: white;
    height: 100vh;
    position: fixed;
    top: 0;
    left: 0;
    display: flex;
    flex-direction: column;
    padding: 20px 0;
}

.sidebar ul {
    list-style-type: none;
    padding: 0;
    margin: 0;
}

.sidebar ul li {
    padding: 15px 20px;
    cursor: pointer;
    font-size: 18px;
    font-weight: bold;
    transform: background-color 0.3s ease;
}

.sidebar ul li:hover {
    background-color: grey;
}

.main-content {
    margin-left: 200px;
    padding: 20px;
}

/* Responsive behavior for smaller screens */
@media (max-width: 768px) {
    .sidebar {
        width: 150px;
    }
    .main-content {
        margin-left: 150px;
    }
}

.logo {
    text-align: center;
    margin-bottom: 20px;
}

.logo img {
    max-width: 100px;
    border-radius: 10px;
}

.hero {
    background: linear-gradient(120deg, #1f1f1f, #4f4f4f);
    color: white;
    padding: 50px 20px;
    text-align: center;
    width: 100vw;
    box-sizing: border-box;
    position: relative;
}

.hero h1 {
    font-size: 3em;
}

.hero button {
    background-color: green;
    color: white;
    padding: 10px 20px;
    border: none;
    cursor: pointer;
    border-radius: 5px;
}

.hero button:hover {
    background-color: darkgreen;
}

.stats {
    display: flex;
    justify-content: space-around;
    padding: 20px;
    background: #f4f4f4;
    margin: 20px 0;
    border-radius: 8px;
}

.stats div {
    text-align: center;
}

.stats h2 {
    font-size: 2rem;
    margin: 0;
}

.stats p {
    color: #555;
}

